--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^6.7.2",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/typeorm": "^7.0.0",
+    "class-validator": "^0.11.1",
     "es6-shim": "^0.35.5",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
