--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,5 +6,10 @@
     "password": "root",
     "database": "body-training",
     "entities": ["dist/**/*.entity{.ts,.js}"],
-    "synchronize": true
+    "synchronize": true,
+    "migrationsTableName": "custom_migration_table",
+    "migrations": ["migration/*.js"],
+    "cli": {
+        "migrationsDir": "migration"
+    }
 }
