- Config debug mode - fix several links import

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "license": "MIT",
   "scripts": {
+    "debug": "nodemon --config nodemon.debug.json",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
