--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,7 +5,7 @@
     "username": "root",
     "password": "root",
     "database": "body-training",
-    "entities": ["dist/**/*.entity{.ts,.js}"],
+    "entities": ["src/**/**.entity{.ts,.js}"],
     "synchronize": true,
     "migrationsTableName": "custom_migration_table",
     "migrations": ["migration/*.js"],
