--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
     "es6-shim": "^0.35.5",
+    "express-jwt": "^5.3.3",
+    "jwks-rsa": "^1.8.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
